[gd_scene load_steps=6 format=3 uid="uid://db5ccklw88mq0"]

[ext_resource type="Texture2D" uid="uid://b5sk5kkxoj1cr" path="res://assets/lightning.png" id="1_k2dum"]
[ext_resource type="Script" uid="uid://boa4m0jsn8vqu" path="res://scripts/lightning.gd" id="2_n7g4i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k2dum"]
size = Vector2(1.63971, 2.9481)

[sub_resource type="Gradient" id="Gradient_5kvrx"]
offsets = PackedFloat32Array(0, 0.199029, 0.23301, 0.635922)
colors = PackedColorArray(1, 1, 1, 1, 1, 0.587717, 0, 1, 1, 0.675318, 0.0593736, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_k2dum"]
gradient = SubResource("Gradient_5kvrx")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Lightning" type="Sprite2D"]
texture = ExtResource("1_k2dum")
script = ExtResource("2_n7g4i")

[node name="Lightning_Collision" type="Area2D" parent="."]
position = Vector2(0, 9.53674e-07)
scale = Vector2(10.9375, 10.9375)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lightning_Collision"]
position = Vector2(0.00300204, -0.0111939)
shape = SubResource("RectangleShape2D_k2dum")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -9)
scale = Vector2(1.09375, 1.09375)
texture = SubResource("GradientTexture2D_k2dum")

[connection signal="area_entered" from="Lightning_Collision" to="." method="_on_lightning_collision_area_entered"]
[connection signal="area_exited" from="Lightning_Collision" to="." method="_on_lightning_collision_area_exited"]
[connection signal="mouse_entered" from="Lightning_Collision" to="." method="_on_lightning_collision_mouse_entered"]
[connection signal="mouse_exited" from="Lightning_Collision" to="." method="_on_lightning_collision_mouse_exited"]
